<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/header_data">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/selectDataTypeFragment"
                    android:icon="@drawable/baseline_list_24"
                    android:title="@string/header_documents" />
                <item
                    android:id="@+id/nav_catalogs"
                    android:icon="@drawable/baseline_list_24"
                    android:title="@string/header_catalogs" />
            </group>
        </menu>
    </item>


    <item android:title="@string/action_settings">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/connectionsListFragment"
                    android:icon="@drawable/ic_phonelink_setup_black_24dp"
                    android:title="@string/action_connection_settings" />
                <item
                    android:id="@+id/nav_logoff"
                    android:icon="@drawable/twotone_phonelink_erase_24"
                    android:title="@string/action_logoff" />
            </group>
        </menu>
    </item>

</menu>
