<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save_document"
        android:orderInCategory="20"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_save_white_24"/>

    <item
        android:id="@+id/edit_document"
        android:orderInCategory="10"
        android:title="@string/action_edit"
        android:icon="@drawable/baseline_edit_white_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/refresh"
        android:orderInCategory="30"
        android:title="@string/action_refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/delete_document"
        android:orderInCategory="40"
        android:title="@string/action_delete"
        app:showAsAction="never"/>

</menu>