<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/selectDocumentTypeFragment">

    <fragment
        android:id="@+id/selectDocumentTypeFragment"
        android:name="ua.com.programmer.simpleremote.ui.selector.SelectDocumentTypeFragment"
        android:label="@string/header_documents" />
    <fragment
        android:id="@+id/connectionsListFragment"
        android:name="ua.com.programmer.simpleremote.ui.connection.ConnectionsListFragment"
        android:label="@string/connections_list" >
        <action
            android:id="@+id/action_connectionsListFragment_to_connectionFragment"
            app:destination="@id/connectionFragment" />
    </fragment>
    <fragment
        android:id="@+id/connectionFragment"
        android:name="ua.com.programmer.simpleremote.ui.connection.ConnectionFragment"
        android:label="@string/action_connection_settings" >
        <argument
            android:name="guid"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/selectCatalogTypeFragment"
        android:name="ua.com.programmer.simpleremote.ui.selector.SelectCatalogTypeFragment"
        android:label="@string/header_catalogs" />
</navigation>